LU-3101 mgs: deregister the mount for failed case

in server_start_mgs, the mount of MGS should be deregistered
if MGS failed to start up.

Change-Id: I03c7c3c8e0c578391b637fe0bcdf48da5e318db8
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>